--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ pandera = "0.24.0"
 #typing-inspect = "0.9.0"
 
 [dev-packages]
+pytest = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.11"
